Add tracing for LayoutView::commitPendingSelection

Committing selection can sometimes be slow; see the attached bug for an
example.

BUG=668122

Review-Url: https://codereview.chromium.org/2536733003
Cr-Commit-Position: refs/heads/master@{#434671}